--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <p><a href="#" class="dif-link">Go back to top ⤒</a></p>
   </main>
   <footer>
-    <p>⋆ ★ Made by Dante Anchondo - 2023 ★ ⋆</p>
+    <p>⋆ ★ Made by Mouse - 2023 ★ ⋆</p>
   </footer>
 </body>
 </html>
